Fix(SidePanel): Align hide icon in header

--- a/src/client/src/components/side-panel/SidePanel.css
+++ b/src/client/src/components/side-panel/SidePanel.css
@@ -153,6 +153,7 @@ a {
   }
 
   .hide-side-panel-icon {
+    float:right;
     display: block;
     margin-top: 1.5vh;
     pointer-events: auto;
